Manually handle typecasting to AccountManager
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>